--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1968,7 +1968,7 @@
 		#header header h1 {
 			font-size: 3.25em;
 			font-weight:900;
-			font-family:fantasy;
+			font-family:Impact, Charcoal, sans-serif;
 			-webkit-font-smoothing: antialiased;
 			-moz-osx-font-smoothing: grayscale;
 			line-height: 1.25em;
