--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,29 +1,35 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700italic,700);
+
 img[alt=title-img] {
-    display: block;
-    margin: auto;
-    page-break-after: always;
+  display: block;
+  margin: auto;
+  page-break-after: always;
 }
 
 h1 {
-    page-break-after: avoid;
-    border-top: 2px double black;
-    border-bottom: 2px double black;
+  break-after: avoid;
+  page-break-after: avoid;
+  border-top: 2px double black;
+  border-bottom: 2px double black;
+  font-weight: bolder;
 }
 
 h2 {
-    page-break-after: avoid;
-    border-bottom: 1px solid black;
+  break-after: avoid;
+  border-bottom: 1px solid black;
+  font-weight: bold;
 }
 
 * {
-    font-family: "Segoe UI";
-    font-stretch: extra-expanded;
+  font-family: "Open Sans";
+  font-size: 94%;
+  font-weight: lighter;
 }
 
 table {
-    page-break-inside: avoid;
-    margin: 0;
-    font-size: 95%;
+  page-break-inside: avoid;
+  margin: 0;
+  font-size: 100%;
 }
 
 table, td {
@@ -37,7 +43,5 @@ th {
 }
 
 body {
-  font-size: 84%;
-  font-stretch: extra-expanded;
-  font-kerning: none;
+  font-size: 56%;
 }
