--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,26 +7,32 @@ img[alt=title-img] {
 }
 
 h1 {
-  break-after: avoid;
-  page-break-after: avoid;
+  float:none;
+  page-break-after:avoid;
   border-top: 2px double black;
   border-bottom: 2px double black;
   font-weight: bolder;
 }
 
 h2 {
-  break-after: avoid;
+  page-break-after: avoid;
   border-bottom: 1px solid black;
+  font-weight: bold;
+}
+
+h3 {
+  page-break-after: avoid;
   font-weight: bold;
 }
 
 * {
   font-family: "Open Sans";
-  font-size: 94%;
+  font-size: 95%;
   font-weight: lighter;
 }
 
 table {
+  page-break-before: avoid;
   page-break-inside: avoid;
   margin: 0;
   font-size: 100%;
@@ -43,5 +49,5 @@ th {
 }
 
 body {
-  font-size: 56%;
+  font-size: 60%;
 }
