--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,7 +2,6 @@
 img[alt=title-img] {
     display: block;
     margin: auto;
-    page-break-after: always;
 }
 
 img[alt=image] {
@@ -15,6 +14,7 @@ div {
 }
 
 h1 {
+    page-break-before: always;
     border-top: 2px double black;
     border-bottom: 2px double black;
     font-weight: bolder;
@@ -31,7 +31,7 @@ h3 {
 
 * {
     font-family: "Open Sans";
-    font-size: 93%;
+    font-size: 94%;
     font-weight: lighter;
     font-size-adjust: auto;
 }
@@ -39,7 +39,6 @@ h3 {
 table {
     page-break-inside: avoid;
     margin: 0;
-    font-size: 99%;
 }
 
 table, td {
@@ -54,4 +53,8 @@ th {
 
 body {
     font-size: 56%;
+}
+
+strong {
+    font-size: 100%;
 }
