Only process changed, new pagebreak formatting.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -13,6 +13,10 @@ div {
     page-break-inside: avoid;
 }
 
+.page-break {
+    page-break-before: always;
+}
+
 h1 {
     page-break-before: always;
     border-top: 2px double black;
