Add metamagic, range, light, and bulk rules.
- Rebalanced metamagic costs. Now metamagic costs 1-2 HP less.
- Stat drain takes a long rest and a full day to recover from.
- Added carrying capacity secondary stat.

The following changes are thanks to JohnG on Discord:
- Added new counter metamagics
- Added 'Attune' metamagic as the start of an elemental damage system
- Added rules for Light, Range, and Bulk

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -87,7 +87,7 @@ ul, ol {
     padding-left: 1.6em;
 }
 
-li > p {
+ul p {
     display: inline;
 }
 
@@ -109,6 +109,7 @@ blockquote, pre {
 blockquote {
     margin-left: 0;
     margin-right: 0;
+    page-break-inside: avoid;
 }
 
 /* Collapse margin where padding makes it redundant. */
