--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,11 +1,15 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700italic,700');
-@import url('https://fonts.googleapis.com/css?family=Trade+Winds');
+@import url('../static/OpenSans/font.css');
+@import url('../static/TradeWinds/font.css');
 
 /* Horribly hacky. */
 img[alt=title-img], img.title-img {
     display: block;
     margin: 0 auto;
-    width: 12rem;
+    width: 4in;
+}
+
+html {
+	font-size: 1em;
 }
 
 .title {
@@ -61,7 +65,7 @@ h2 {
 }
 
 body {
-    font-size: 9px;
+    font-size: 0.92em;
 }
 
 p, ul, ol, table, blockquote {
